# ecnu-electricity-statistics

./: .gitignore  README.md  builds.json  data.js  flake.nix  index.html  integration_test.sh  main.py  pyproject.toml
.github/workflows/: gh-sync.yml  main.yml
